More FindBugs errors